[gd_scene load_steps=12 format=3 uid="uid://cdhn4ukk3vm83"]

[ext_resource type="Script" path="res://main.gd" id="1_ks5fn"]
[ext_resource type="Texture2D" uid="uid://cahwwuqxicsxa" path="res://assets/grass.png" id="1_twk0b"]
[ext_resource type="PackedScene" uid="uid://cpvfh4koijcvh" path="res://player.tscn" id="2_cu0ld"]
[ext_resource type="PackedScene" uid="uid://cr5mugxc72rdy" path="res://coin.tscn" id="2_eq11c"]
[ext_resource type="PackedScene" uid="uid://brdcxow4ticef" path="res://cactus.tscn" id="4_cstb1"]
[ext_resource type="PackedScene" uid="uid://bm8pdku2p08qh" path="res://hud.tscn" id="5_1l0vu"]
[ext_resource type="AudioStream" uid="uid://ccylm8nkkv80d" path="res://assets/audio/Coin.wav" id="6_el61o"]
[ext_resource type="PackedScene" uid="uid://b1iax14qfp7d0" path="res://powerup.tscn" id="6_fiyvp"]
[ext_resource type="AudioStream" uid="uid://bvcdk18lwhsnn" path="res://assets/audio/EndSound.wav" id="6_qlrfw"]
[ext_resource type="AudioStream" uid="uid://dgm0psryieg6a" path="res://assets/audio/Level.wav" id="8_xmpqw"]
[ext_resource type="AudioStream" uid="uid://rdxds87m38y8" path="res://assets/audio/Powerup.wav" id="9_m3uki"]

[node name="Main" type="Node"]
script = ExtResource("1_ks5fn")
coin_scene = ExtResource("2_eq11c")
powerup_scene = ExtResource("6_fiyvp")
cactus_scene = ExtResource("4_cstb1")

[node name="BackGround" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_twk0b")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_cu0ld")]

[node name="GameTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource("5_1l0vu")]

[node name="CoinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_el61o")

[node name="EndSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_qlrfw")

[node name="LevelSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_xmpqw")

[node name="PowerupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_m3uki")

[node name="PowerupDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="CoinPrepTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CactusPrepTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="PowerupPrepTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="hurt" from="Player" to="." method="_on_player_hurt"]
[connection signal="pickup" from="Player" to="." method="_on_player_pickup"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
[connection signal="timeout" from="PowerupDelayTimer" to="." method="_on_powerup_delay_timer_timeout"]
[connection signal="timeout" from="CoinPrepTimer" to="." method="_on_coin_prep_timer_timeout"]
[connection signal="timeout" from="CactusPrepTimer" to="." method="_on_cactus_prep_timer_timeout"]
[connection signal="timeout" from="PowerupPrepTimer" to="." method="_on_powerup_prep_timer_timeout"]
